--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "cropper": "^4.1.0",
+        "cropperjs": "^1.6.1"
     }
 }
